--- a/managementWarehouse_frontend/src/main/webapp/app/entities/order-detail-info/order-detail-info-update.component.html
+++ b/managementWarehouse_frontend/src/main/webapp/app/entities/order-detail-info/order-detail-info-update.component.html
@@ -9,27 +9,27 @@
                     <input type="text" class="form-control" id="id" name="id" formControlName="id"
                         readonly />
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label class="form-control-label" jhiTranslate="managementWarehouseApp.orderDetailInfo.productName" for="field_productName">Product Name</label>
                     <input type="text" class="form-control" name="productName" id="field_productName"
                            formControlName="productName"/>
-                </div>
-                <div class="form-group">
+                </div> -->
+                <!-- <div class="form-group">
                     <label class="form-control-label" jhiTranslate="managementWarehouseApp.orderDetailInfo.priceProduct" for="field_priceProduct">Price Product</label>
                     <input type="number" class="form-control" name="priceProduct" id="field_priceProduct"
                            formControlName="priceProduct"/>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="managementWarehouseApp.orderDetailInfo.quantityOrder" for="field_quantityOrder">Quantity Order</label>
                     <input type="number" class="form-control" name="quantityOrder" id="field_quantityOrder"
                            formControlName="quantityOrder"/>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label class="form-control-label" jhiTranslate="managementWarehouseApp.orderDetailInfo.amount" for="field_amount">Amount</label>
                     <input type="number" class="form-control" name="amount" id="field_amount"
                            formControlName="amount"/>
-                </div>
-                <div class="form-group">
+                </div> -->
+                <!-- <div class="form-group">
                     <label class="form-control-label" jhiTranslate="managementWarehouseApp.orderDetailInfo.orderDate" for="field_orderDate">Order Date</label>
                     <div class="input-group">
                         <input id="field_orderDate" type="text" class="form-control" name="orderDate" ngbDatepicker  #orderDateDp="ngbDatepicker" formControlName="orderDate"/>
@@ -37,7 +37,7 @@
                             <button type="button" class="btn btn-secondary" (click)="orderDateDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
                         </span>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="managementWarehouseApp.orderDetailInfo.orderInfo" for="field_orderInfo">Order Info</label>
