--- a/managementWarehouse_frontend/src/main/webapp/app/entities/product/product.component.html
+++ b/managementWarehouse_frontend/src/main/webapp/app/entities/product/product.component.html
@@ -49,11 +49,11 @@
                     </td>
                     <td class="text-right">
                         <div class="btn-group">
-                            <button (click)="import()" >
+                            <button (click)="import(product)" >
                                 <fa-icon [icon]="'plus'"></fa-icon>
                                 <span class="d-none d-md-inline">Import</span>
                             </button>
-                            <button (click)="order()" class="btn btn-warning">
+                            <button (click)="order(product)" class="btn btn-warning">
                                 <fa-icon [icon]="'minus'"></fa-icon>
                                 <span class="d-none d-md-inline">Order</span>
                             </button>
