--- a/managementWarehouse_frontend/src/main/webapp/app/entities/product/import/import-detail-info-update/import-detail-info-update.component.html
+++ b/managementWarehouse_frontend/src/main/webapp/app/entities/product/import/import-detail-info-update/import-detail-info-update.component.html
@@ -1,3 +1,5 @@
+<div class="pop_up_import">
+
 <div class="modal-header">
     <h4 class="modal-title"></h4>
     <button aria-label="Close" data-dismiss="modal" class="close" type="button"
@@ -36,13 +38,13 @@
                         <option [ngValue]="importInfoOption.id === editForm.get('importInfo')!.value?.id ? editForm.get('importInfo')!.value : importInfoOption" *ngFor="let importInfoOption of importinfos; trackBy: trackById">{{importInfoOption.id}}</option>
                     </select>
                 </div> -->
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="managementWarehouseApp.importDetailInfo.product" for="field_product">Product</label>
+                <!-- <div class="form-group"> -->
+                    <!-- <label class="form-control-label" jhiTranslate="managementWarehouseApp.importDetailInfo.product" for="field_product">Product</label>
                     <select class="form-control" id="field_product" name="product" formControlName="product">
                         <option [ngValue]="null"></option>
                         <option [ngValue]="productOption.id === editForm.get('product')!.value?.id ? editForm.get('product')!.value : productOption" *ngFor="let productOption of products; trackBy: trackById">{{productOption.id}}</option>
                     </select>
-                </div>
+                </div> -->
             </div>
             <div>
                 <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
@@ -54,4 +56,5 @@
             </div>
         </form>
     </div>
+</div>
 </div>
